# cdc

./: CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml
benches/: benchmarks.rs
examples/: chunk.rs  separator.rs  tree.rs  tree01.rs  tree02.rs
src/: chunk.rs  lib.rs  polynom.rs  rolling_hash.rs  separator.rs  tree.rs
