[package]
name = "cdc"
version = "0.0.2"
description = "Very useful library for performing a Content-Defined Chunking (CDC)"
readme = "README.md"
license = "MIT"

authors = ["Vincent Cantin <vincent.cantin@le-moulin-studio.com>"]
homepage = "https://github.com/green-coder/cdc"
repository = "https://github.com/green-coder/cdc"

keywords = ["rabin", "cdc", "chunk", "chunking", "merkle"]
exclude = [
  "*.bin"
]

[dependencies]

[dev-dependencies]
ring = "0.4.3"
arrayref = "0.3.2"
