[package]
name = "cdc"
version = "0.1.0"
description = "A library for performing Content-Defined Chunking (CDC) on data streams."
readme = "README.md"
license = "MIT"

authors = ["Vincent Cantin <vincent.cantin@le-moulin-studio.com>"]
homepage = "https://github.com/green-coder/cdc"
repository = "https://github.com/green-coder/cdc"

keywords = ["rabin", "cdc", "chunk", "chunking", "merkle", "dedup"]
exclude = [
  "*.bin"
]

[dependencies]

[dev-dependencies]
ring = "0.4.3"
arrayref = "0.3.2"
