[package]
name = "cdc"
version = "0.1.1"
description = "A library for performing Content-Defined Chunking (CDC) on data streams."
readme = "README.md"
license = "MIT"
edition = "2018"

authors = ["Vincent Cantin <vincent@404.taipei>"]
homepage = "https://github.com/green-coder/cdc"
repository = "https://github.com/green-coder/cdc"

keywords = ["rabin", "cdc", "chunk", "merkle", "dedup"]
exclude = [
  "*.bin"
]

[dependencies]

[dev-dependencies]
ring = "0.16.1"
arrayref = "0.3.2"
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
